--- a/checklab2.ipynb
+++ b/checklab2.ipynb
@@ -2,21 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "9fa1eb2e-9790-4e40-b284-65cea3785fd9",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "id": "b5a63428-d91f-49f0-a318-079ad45094ff",
    "metadata": {},
    "outputs": [],
    "source": [
     "import torch\n",
-    "from torchvision import models\n",
+    "from torchvision import models, transforms\n",
+    "from PIL import Image\n",
+    "from tqdm.notebook import tqdm\n",
+    "import os\n",
+    "import cv2\n",
     "\n",
     "class FeatureExtractor:\n",
     "    def __init__(self):\n",
@@ -31,53 +27,264 @@
     "                print(f'Passing through layer {type(feature)}')\n",
     "            if i == self.max_pooling_indices[stage]:\n",
     "                return x\n",
-    "            x = feature(x)"
+    "            x = feature(x)\n",
+    "\n",
+    "def resize_image(image, size):\n",
+    "    h,w,c = image.shape\n",
+    "\n",
+    "    if h > w:\n",
+    "        w = int(size*w/h)\n",
+    "        h = size\n",
+    "    else:\n",
+    "        h = int(size*h/w)\n",
+    "        w = size\n",
+    "    new_image = np.zeros((size, size, 3), dtype=np.uint8)\n",
+    "\n",
+    "    image = cv2.resize(image, (w, h))\n",
+    "    new_image[0:h, 0:w, :] = image\n",
+    "    return new_image\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "2d0d3ac5-26f7-4f10-a0a1-8e172fd92631",
+   "execution_count": 45,
+   "id": "4ea23e6f-7a91-456e-bb10-fb4ec3f85f5b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ca6f0d45cae840eea040773d766b617c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/10 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/40 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/40 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/40 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/40 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/40 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/40 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/40 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/40 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/40 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "## TRANSFORMAR IMAGE DATASET A VECTORES DE LA VGG\n",
+    "\n",
+    "feature_extractor = FeatureExtractor()\n",
+    "backbone_transforms = transforms.Compose([transforms.ToTensor(),\n",
+    "                                          transforms.Normalize([0.485, 0.456, 0.406], [0.229, 0.224, 0.225])])\n",
+    "fruits_dataset_path = './data/fruits_dataset/'\n",
+    "labels = []\n",
+    "feature_vectors = []\n",
+    "for label_name in tqdm(os.listdir(fruits_dataset_path)):\n",
+    "    if label_name == '.DS_Store':\n",
+    "        continue\n",
+    "    folder_path = os.path.join(fruits_dataset_path, label_name)\n",
+    "    for image_name in tqdm(os.listdir(folder_path), leave=False):\n",
+    "        image_path = os.path.join(folder_path, image_name)\n",
+    "        image = Image.open(image_path)\n",
+    "        if image.mode in ['RGBA', 'L', 'P']:\n",
+    "            image = image.convert('RGB')\n",
+    "        image = np.array(image)[...,::-1]\n",
+    "        image = resize_image(image, 255)\n",
+    "        transformed_image = backbone_transforms(image).unsqueeze(0)\n",
+    "        feature_vectors += [feature_extractor.extract_feature_vector(transformed_image, 3).flatten().numpy()]\n",
+    "        labels += [label_name]\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "133086f9-dfd1-4a96-bfb0-4d69d970d0dd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fv_dataset = np.array(feature_vectors)\n",
+    "labels = np.array(labels)\n",
+    "labels2 = np.unique(labels, return_inverse=True)[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "0c459454-dd91-4ce8-8ee4-9266e198860c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "image = Image.open(image_path)\n",
+    "if image.mode in ['RGBA', 'L']:\n",
+    "    image = image.convert('RGB')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "b41b5672-965c-4f72-9c4c-6112595cb92a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[[-2.1179, -2.1179, -2.1179,  ..., -2.1179, -2.1179, -2.1179],\n",
-       "         [-2.1179, -2.1179, -2.1179,  ..., -2.1179, -2.1179, -2.1179],\n",
-       "         [-2.1179, -2.1179, -2.1179,  ..., -2.1179, -2.1179, -2.1179],\n",
-       "         ...,\n",
-       "         [-2.1179, -2.1179, -2.1179,  ..., -2.1179, -2.1179, -2.1179],\n",
-       "         [-2.1179, -2.1179, -2.1179,  ..., -2.1179, -2.1179, -2.1179],\n",
-       "         [-2.1179, -2.1179, -2.1179,  ..., -2.1179, -2.1179, -2.1179]],\n",
-       "\n",
-       "        [[-2.0357, -2.0357, -2.0357,  ..., -2.0357, -2.0357, -2.0357],\n",
-       "         [-2.0357, -2.0357, -2.0357,  ..., -2.0357, -2.0357, -2.0357],\n",
-       "         [-2.0357, -2.0357, -2.0357,  ..., -2.0357, -2.0357, -2.0357],\n",
-       "         ...,\n",
-       "         [-2.0357, -2.0357, -2.0357,  ..., -2.0357, -2.0357, -2.0357],\n",
-       "         [-2.0357, -2.0357, -2.0357,  ..., -2.0357, -2.0357, -2.0357],\n",
-       "         [-2.0357, -2.0357, -2.0357,  ..., -2.0357, -2.0357, -2.0357]],\n",
-       "\n",
-       "        [[-1.8044, -1.8044, -1.8044,  ..., -1.8044, -1.8044, -1.8044],\n",
-       "         [-1.8044, -1.8044, -1.8044,  ..., -1.8044, -1.8044, -1.8044],\n",
-       "         [-1.8044, -1.8044, -1.8044,  ..., -1.8044, -1.8044, -1.8044],\n",
-       "         ...,\n",
-       "         [-1.8044, -1.8044, -1.8044,  ..., -1.8044, -1.8044, -1.8044],\n",
-       "         [-1.8044, -1.8044, -1.8044,  ..., -1.8044, -1.8044, -1.8044],\n",
-       "         [-1.8044, -1.8044, -1.8044,  ..., -1.8044, -1.8044, -1.8044]]])"
+       "'P'"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "image.mode"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "2d0d3ac5-26f7-4f10-a0a1-8e172fd92631",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'np' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[3], line 4\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mPIL\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Image\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mtorchvision\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m transforms\n\u001b[0;32m----> 4\u001b[0m image \u001b[38;5;241m=\u001b[39m Image\u001b[38;5;241m.\u001b[39mfromarray(np\u001b[38;5;241m.\u001b[39mzeros((\u001b[38;5;241m255\u001b[39m,\u001b[38;5;241m255\u001b[39m,\u001b[38;5;241m3\u001b[39m), dtype\u001b[38;5;241m=\u001b[39mnp\u001b[38;5;241m.\u001b[39muint8))\n\u001b[1;32m      5\u001b[0m backbone_transforms(image)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'np' is not defined"
+     ]
+    }
+   ],
+   "source": [
     "from PIL import Image\n",
     "from torchvision import transforms\n",
-    "backbone_transforms = transforms.Compose([transforms.ToTensor(),\n",
-    "                                          transforms.Normalize([0.485, 0.456, 0.406], [0.229, 0.224, 0.225])])\n",
+    "\n",
     "image = Image.fromarray(np.zeros((255,255,3), dtype=np.uint8))\n",
     "backbone_transforms(image)"
    ]
