Adding lab with one example. Flowers

--- a/lab2-minimal-training.ipynb
+++ b/lab2-minimal-training.ipynb
@@ -357,7 +357,8 @@
     "## NOTAS a considerar sobre este notebook\n",
     "- No se incluyo una random seed para el split o la creación del modelo\n",
     "- Solo se visualizó la matriz de confusion y no se realizo ningun otro analisis. Queda del lado del estudiante realizar evaluaciones rigurosas que permitan comparar multiples approaches\n",
-    "- Apoyarse en el lab anterior para las tareas que tienen de forma común"
+    "- Apoyarse en el lab anterior para las tareas que tienen de forma común\n",
+    "- No se utilizo ningun tipo de preprocesamiento a los vectores, es bienvenido que exploren la eficacia que puede tener metodos como: normalización y feature selection"
    ]
   },
   {
